ui optimization:removed backdrop blur, improved seo:added descriptive link

--- a/content/blog/power-tracker-app-iot-fullstack.mdx
+++ b/content/blog/power-tracker-app-iot-fullstack.mdx
@@ -82,7 +82,7 @@ Download [source code](https://github.com/45h1m/PowerTracker/blob/main/arduino/P
 > __Prerequisite:__ [Node JS](https://nodejs.org/en/download/package-manager/current) & NPM Installed
 
 
-#### Open two terminals
+Open two terminals
 ### First terminal commands
 Go to `server` folder: 
 ```sh 
