adding some blogs, adding new thumbnails

--- a/content/blog/fingle-attendance-app.mdx
+++ b/content/blog/fingle-attendance-app.mdx
@@ -1,11 +1,11 @@
 ---
-title: Fingle - Portable Fingerprint Attendence App + ESP8266
-description: Attendence system, super portable, register, take attendence, keep record, using wireless device that connects to your phone App.
+title: Fingle - Portable Fingerprint Attendance App + ESP8266
+description: Attendance system, super portable, register, take attendance, keep record, using wireless device that connects to your phone App.
 date: 2024-03-06
-tags: ["javascript", "arduino", "ESP8266", "technology", "project", "fingerprint", "attendence", "react", "c++"]
+tags: ["javascript", "arduino", "ESP8266", "technology", "project", "fingerprint", "attendance", "react", "c++", "app"]
 published: true
 author: Ashim Das
-dp: "/post2.webp"
+dp: "/admin-dp-small.gif"
 thumbnail: "/images/fingle/fingle-thumbnail.webp"
 ---
 
@@ -26,7 +26,7 @@ thumbnail: "/images/fingle/fingle-thumbnail.webp"
     </tbody>
 </table>
 
-Portable solution for taking attendence. \
+Portable solution for taking attendance. \
 This system contains one `device` that have all hardware parts like: `ESP8266`, `Battery`, `Fingerprint Sensor`, `LEDs` etc. \
 `Fingle` App will be available to admin. The app will communicate to `device` using wifi.
 
@@ -47,11 +47,11 @@ Now one can explore all features. The design is apepaling and also minimal.
 
 After clicking enroll, attendee will scan finger and all set.
 
-**Take Attendence Screen**
+**Take Attendance Screen**
 
-<img src="/images/fingle/fingle-taking-attendence.webp" alt="fingle-taking-attendence" style={{ width: "300px", maxWidth: "100%" }} />
+<img src="/images/fingle/fingle-taking-attendance.webp" alt="fingle-taking-attendance" style={{ width: "300px", maxWidth: "100%" }} />
 
-Just by openning **Take Attendence** screen system will be waiting for any enrolled finger. Just scan finger and attendence will be recorded. It's that simple. \
+Just by openning **Take Attendance** screen system will be waiting for any enrolled finger. Just scan finger and attendance will be recorded. It's that simple. \
 Details of attendee will be reflected in App.
 
 **History Screen**
