--- a/content/blog/oxilive-oxygen-bpm-app.mdx
+++ b/content/blog/oxilive-oxygen-bpm-app.mdx
@@ -2,11 +2,11 @@
 title: OxiLive App - Blood-Oxygen monitoring
 description: App that monitors BPM & Blood-Oxygen. Records health data on daily basis. User can login or signup using email-OTP. Interactive data-graph. 
 date: 2024-03-06
-tags: ["technology", "project", "javascript", "ESP8266", "IoT", "node js", "MAX30100", "health", "App", "express", "arduino"]
+tags: ["technology", "project", "javascript", "ESP8266", "IoT", "node js", "MAX30100", "health", "App", "express", "arduino","App"]
 published: true
 author: Ashim Das
 thumbnail: '/images/oxilive/oxilive-thumbnail.webp'
-dp: '/post1.jpg'
+dp: '/admin-dp-small.gif'
 ---
 
 # Realtime Blood-Oxygen & BPM Monitoring App
