--- a/content/blog/power-tracker-app-iot-fullstack.mdx
+++ b/content/blog/power-tracker-app-iot-fullstack.mdx
@@ -2,11 +2,11 @@
 title: Power Tracker - Fullstack Solar Power Tracking App + ESP8266
 description: Track realtime power by reading realtime consumption and charging power by arduino, fullstack app that tracks daily power data also shows realtime insights.
 date: 2024-03-06
-tags: ["project", "javascript", "App", "react", "IoT", "ESP8266", "arduino", "node js", "fullstack", "coding", "technology"]
+tags: ["project", "javascript", "App", "react", "IoT", "ESP8266", "arduino", "node js", "fullstack", "coding", "technology", "App"]
 published: true
 author: Ashim Das
-dp: '/post1.jpg'
-thumbnail: '/images/power-tracker/power-tracker-ui.webp'
+dp: '/admin-dp-small.gif'
+thumbnail: '/images/power-tracker/power-tracker-thumbnail.webp'
 ---
 
 
