--- a/content/blog/wifi-hacking.mdx
+++ b/content/blog/wifi-hacking.mdx
@@ -5,11 +5,14 @@ date: 2024-03-06
 tags: ["cyber security", "hacking", "technology", "wifi", "offensive"]
 published: true
 author: Arindam Chakraborty
-dp: "post2.webp"
-thumbnail: "/post2.webp"
+dp: "/admin-dp-small.gif"
+thumbnail: "/images/wifi-hacking/wifi-hacking-thumbnail.webp"
 ---
 
 # Pi-PwnBox :rocket: -RogueAP :satellite:
+
+<img src="/images/wifi-hacking/wifi-hacking-thumbnail.webp" alt="wifi-hacking-thumbnail" style={{ width: "100%", maxWidth: "100%" }} />
+
 
 **Homemade (headless) PwnBox / RogueAP based on Raspberry Pi & Alfa WiFi USB Adapters.**
 
